--- a/package.json
+++ b/package.json
@@ -23,11 +23,8 @@
   },
   "devDependencies": {
     "@types/node": "^22.9.1",
-    "commander": "^12.1.0",
-    "dotenv-cli": "^7.4.3",
     "prettier": "^3.3.3",
     "prettier-plugin-astro": "^0.14.1",
-    "prettier-plugin-tailwindcss": "^0.6.6",
-    "tsx": "^4.19.2"
+    "prettier-plugin-tailwindcss": "^0.6.6"
   }
 }
