--- a/package.json
+++ b/package.json
@@ -13,13 +13,20 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/alpinejs": "^0.4.9",
     "@astrojs/check": "^0.9.6",
+    "@fontsource/dejavu-sans": "^5.2.5",
     "@tailwindcss/vite": "^4.1.18",
+    "@types/alpinejs": "^3.13.11",
+    "alpinejs": "^3.15.3",
     "astro": "^5.16.6",
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
-    "@types/node": "^22.19.3"
+    "@types/bun": "^1.3.5",
+    "prettier": "^3.7.4",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.7.2"
   }
 }
