--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@alpinejs/intersect": "^3.15.3",
     "@astrojs/alpinejs": "^0.4.9",
     "@astrojs/check": "^0.9.6",
     "@fontsource/dejavu-sans": "^5.2.5",
@@ -24,6 +25,7 @@
     "typescript": "^5.9.3"
   },
   "devDependencies": {
+    "@types/alpinejs__intersect": "^3.13.4",
     "@types/bun": "^1.3.5",
     "prettier": "^3.7.4",
     "prettier-plugin-astro": "^0.14.1",
