--- a/.github/workflows/astro.yaml
+++ b/.github/workflows/astro.yaml
@@ -2,16 +2,12 @@ on:
   push:
     branches: ["main"]
   pull_request:
-    branches: ["**"]
 
 concurrency:
   group: "pages"
   cancel-in-progress: false
 
 permissions: {}
-
-env:
-  BUILD_PATH: "."
 
 jobs:
   build:
@@ -24,21 +20,17 @@ jobs:
           persist-credentials: true
       - name: Setup Bun
         uses: oven-sh/setup-bun@735343b667d3e6f658f44d0eca948eb6282f2b76 # v2.0.2
-        with:
-          node-version: "20"
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
       - name: Install dependencies
         run: bun install
-        working-directory: ${{ env.BUILD_PATH }}
       - name: Build with Astro
         run: bun run build
-        working-directory: ${{ env.BUILD_PATH }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ${{ env.BUILD_PATH }}/dist
+          path: ./dist
 
   deploy:
     if: ${{ github.ref == 'refs/heads/main' }}
